add links to various stuff i run

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@ a:active, a:focus, a:hover{ color: #2197db; }
 <main>
     <ul>
         <li><h1>do1g</h1></li>
+        <li><h2>pile of links to things i (@duckinator) manage</h2></li>
+        <li><a href="https://smallest.dog">my personal website</a></li>
+        <li><a href="https://parts.horse">Parts Horse</a></li>
         <li><a href="http://speed.do1g.com">speed test</a></li>
+        <li><a href="https://versions.do1g.com">versions.do1g.com</a></li>
+        <li><a href="https://inatri.com">inatri</a></li>
+        <li><a href="https://awoo.onl">awooOS</a></li>
     </ul>
 </main>
