use <p> instead of <h2>

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ a:active, a:focus, a:hover{ color: #2197db; }
 <main>
     <ul>
         <li><h1>do1g</h1></li>
-        <li><h2>pile of links to things i (@duckinator) manage</h2></li>
+        <li><p>here's a pile of links to things i (@duckinator) manage</p></li>
         <li><a href="https://smallest.dog">my personal website</a></li>
         <li><a href="https://parts.horse">Parts Horse</a></li>
         <li><a href="http://speed.do1g.com">speed test</a></li>
