--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@ a:active, a:focus, a:hover{ color: #2197db; }
 <main>
     <ul>
         <li><h1>do1g</h1></li>
-        <li><p>here's a pile of links to things i (@duckinator) manage</p></li>
-        <li><a href="https://smallest.dog">my personal website</a></li>
+        <li><a href="https://smallest.dog">personal website</a></li>
         <li><a href="https://parts.horse">Parts Horse</a></li>
-        <li><a href="http://speed.do1g.com">speed test</a></li>
+        <li><a href="http://speed.do1g.com">speed test</a> (librespeed, hosted on DigitalOcean)</li>
         <li><a href="https://versions.do1g.com">versions.do1g.com</a></li>
         <li><a href="https://inatri.com">inatri</a></li>
         <li><a href="https://awoo.onl">awooOS</a></li>
