--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ a:active, a:focus, a:hover{ color: #2197db; }
         <li><h1>do1g</h1></li>
         <li><a href="https://smallest.dog">personal website</a></li>
         <li><a href="https://parts.horse">Parts Horse</a></li>
-        <li><a href="http://speed.do1g.com">speed test</a> (<abbr title="Digital Ocean">DO</abbr>, <abbr title="San Francisco 3">SFO3</abbr> region)</li>
+        <li><a href="http://speed.do1g.com">speed test</a> (<abbr title="Digital Ocean">DO</abbr>, <abbr title="San Francisco 3 region">SFO3</abbr>)</li>
         <li><a href="https://versions.do1g.com">versions.do1g.com</a></li>
         <li><a href="https://inatri.com">inatri</a></li>
         <li><a href="https://awoo.onl">awooOS</a></li>
