--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 main {
     font-family: helvetica, sans-serif;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 ul { list-style: none; margin: 0; padding: 0; }
 a, a:visited { color: #166491; }
@@ -15,6 +15,7 @@ a:active, a:focus, a:hover{ color: #2197db; }
 <main>
     <ul>
         <li><h1>do1g</h1></li>
+        <li><p>a collection of things ran and/or maintained by <a href="https://twitter.com/duckinator">@duckinator</a></p></li>
         <li><a href="https://smallest.dog">personal website</a></li>
         <li><a href="https://parts.horse">Parts Horse</a></li>
         <li><a href="http://speed.do1g.com">speed test</a></li>
