--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@ a:active, a:focus, a:hover{ color: #2197db; }
 <main>
     <ul>
         <li><h1>do1g</h1></li>
-        <li><p>a collection of things ran and/or maintained by <a href="https://twitter.com/duckinator">@duckinator</a></p></li>
+        <li>@duckinator</li>
+        <li><a href="https://twitter.com/duckinator">Twitter</a></li>
+        <li><a href="https://github.com/duckinator">GitHub</a></li>
+        <li><p>things i run/maintain</p></li>
         <li><a href="https://smallest.dog">personal website</a></li>
         <li><a href="https://parts.horse">Parts Horse</a></li>
         <li><a href="http://speed.do1g.com">speed test</a></li>
