add bandcamp link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ a:active, a:focus, a:hover{ color: #2197db; }
         <li>@duckinator</li>
         <li><a href="https://twitter.com/duckinator">Twitter</a></li>
         <li><a href="https://github.com/duckinator">GitHub</a></li>
+        <li><a href="https://duckinator.bandcamp.com">Bandcamp</a></li>
         <li><p>things i run/maintain</p></li>
         <li><a href="https://smallest.dog">personal website</a></li>
         <li><a href="https://parts.horse">Parts Horse</a></li>
