--- a/index.html
+++ b/index.html
@@ -5,20 +5,30 @@
 * { background: #fafaff; }
 main {
     font-family: helvetica, sans-serif;
-    text-align: center;
     font-size: 1.5rem;
+    max-width: 60ch;
+    margin: 0 auto;
 }
-ul { list-style: none; margin: 0; padding: 0; }
+h2 { font-size: 2rem; }
+ul, h2 {
+    text-align: center;
+}
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 a, a:visited { color: #166491; }
 a:active, a:focus, a:hover{ color: #2197db; }
 </style>
 <main>
     <ul>
-        <li><h1>do1g</h1></li>
+        <li><h1>Ellen Dash</h1></li>
         <li>@duckinator</li>
         <li><a href="https://twitter.com/duckinator">Twitter</a></li>
         <li><a href="https://github.com/duckinator">GitHub</a></li>
-        <li><a href="https://duckinator.bandcamp.com">Bandcamp</a></li>
+        <li><a href="https://duckinator.bandcamp.com">Bandcamp (paid)</a></li>
+        <li><a href="https://archive.org/search.php?query=creator%3A%22Ellen+Marie+Dash%22&sort=-date">Internet Archive (free)</a></li>
         <li><p>things i run/maintain</p></li>
         <li><a href="https://smallest.dog">personal website</a></li>
         <li><a href="https://parts.horse">Parts Horse</a></li>
@@ -26,4 +36,12 @@ a:active, a:focus, a:hover{ color: #2197db; }
         <li><a href="https://inatri.com">inatri</a></li>
         <li><a href="https://awoo.onl">awooOS</a></li>
     </ul>
+
+    <h2>My Music Is All Released under CC-BY 4.0</h2>
+    <p><em>All</em> of my music is on Bandcamp (paid) and the Internet Archive (free).</p>
+    <p>Both provide lossless copies, in the FLAC format.</p>
+    <p>Regardless of source, all of my music is under the <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0</a> license.</p>
+    <p>Anyone is free to use my music for any purpose, including modifying it, as long as you give me credit. Mentioning my name and linking to do1g.com is sufficient.</p>
+    <p>If you use my music, please let me know! I'd love to see where it winds up.</p>
+    <p>You can mention or DM me on Twitter, or send an email to <a href="mailto:me@duckie.co">me@duckie.co</a>.</p>
 </main>
