--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@ a:active, a:focus, a:hover{ color: #2197db; }
 
     <ul>
         <li><a href="https://weirder.earth/@puppy">Mastodon</a></li>
+        <li><a href="https://bsky.app/profile/duckinator.bsky.social">Bluesky</a></li>
         <li><a href="https://github.com/duckinator">GitHub</a></li>
-        <li><a href="https://duckinator.bandcamp.com">Bandcamp (paid)</a></li>
-        <li><a href="https://archive.org/search.php?query=creator%3A%22Ellen+Marie+Dash%22&sort=-date">Internet Archive (free)</a></li>
+        <li><a href="https://duckinator.bandcamp.com">My music on Bandcamp (paid)</a></li>
+        <li><a href="https://archive.org/search.php?query=creator%3A%22Ellen+Marie+Dash%22&sort=-date">My music on Internet Archive (free)</a></li>
         <li><a href="mailto:me@duckie.co">email</a></li>
     </ul>
 
