--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@ a:active, a:focus, a:hover{ color: #2197db; }
         <li><a href="mailto:me@duckie.co">email</a></li>
     </ul>
 
+    <h2>music</h2>
+    <ul>
+        <li><a href="https://duckinator.bandcamp.com">Bandcamp (paid)</a></li>
+        <li><a href="https://archive.org/search.php?query=creator%3A%22Ellen+Marie+Dash%22&sort=-date">Internet Archive (free)</a></li>
+    </ul>
+    
     <h2>websites</h2>
     <ul>
         <li><a href="https://smallest.dog">personal website</a></li>
